# macro_pad

./: .gitignore  CMakeLists.txt  main.c  matrix_keypad.c  matrix_keypad.h  usb_descriptors.c
models/: keycap.stl  pi_pico_macro_pad_base.stl  pi_pico_macro_pad_lid.stl
